--- a/Tienda-v1L/src/main/resources/application.properties
+++ b/Tienda-v1L/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#para definir el puerto donde escucha el servicdor #
 server.port=80
+#para definir el formdo de despliege de fecha en el lod de la consola#
+logging.pattern.dateformat=hh:mm
+#para eliminar el mensaje o logo de spring#
+spring.main.banner-mode=off 
+# en desarrollo el cache va a ser (false) y en produccion va ser (true)#
+spring.thymeleaf.cache=false 
