--- a/Tienda-v1L/src/main/resources/application.properties
+++ b/Tienda-v1L/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.main.banner-mode=off
 # en desarrollo el cache va a ser (false) y en produccion va ser (true)#
 spring.thymeleaf.cache=false 
 #MySql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/tienda Looney Tunes?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=usuario_prueba
 spring.datasource.password=Usuar1o_Clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
